Fixed quickview z-index

--- a/styles/scss/all.scss
+++ b/styles/scss/all.scss
@@ -107,7 +107,7 @@ img {
     z-index: 99;
 
     &.product--quickview {
-      z-index: 98;
+      z-index: 99;
     }
   }
 
